ecmascript/parser/tests/test262-error-references/fail/f5812798ac3e730d.js.stderr
error: Unexpected token `(`. Expected yield, an identifier, [ or {
 --> $DIR/tests/test262-parser/fail/f5812798ac3e730d.js:1:5
  |
1 | var (a)=0;
  |     ^

